# lab_eng_sw

./: README.md  db.sqlite3  manage.py  openapi-schema.yml  pyproject.toml
app/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20191120_1241.py  0003_pedido_concessionaria.py  0004_admin.py  0005_auto_20191121_0059.py  0006_auto_20191121_0139.py  0007_pedido_protocolo_montadora.py
app/templates/: base.html  cliente.html  concessionaria.html  funcionario.html  home.html  pedido.html
concessionaria/: settings.py  urls.py  wsgi.py
